<resources>
    <string name="app_name">MyCalculator</string>
    <string name="c1">1</string>
    <string name="c2">2</string>
    <string name="c3">3</string>
    <string name="c4">4</string>
    <string name="c5">5</string>
    <string name="c6">6</string>
    <string name="c7">7</string>
    <string name="c8">8</string>
    <string name="c9">9</string>
    <string name="c0">0</string>
    <string name="cp">+</string>
    <string name="cs">-</string>
    <string name="cM">*</string>
    <string name="cd">/</string>
    <string name="ce">=</string>
    <string name="clr">CLR</string>
</resources>
